@@ -1,5 +1,10 @@
 2010-07-13  ebin <yutaka@ebine.org>
 
+	* sabel/db/mysql/Metadata.php: MySQL5.1以降用の外部キー取得SQLに誤りがあった
+	ため修正。（他のスキーマの同名テーブルの外部キー情報も取得してしまう不具合）
+
+2010-07-13  ebin <yutaka@ebine.org>
+
 	* generator/skeleton/en/lib/form/Object.php: 複数のインプット名によるフォー
 	ムバリデーションの際、カンマで連結したインプット名をsubmitメソッドに渡さなく
 	てもいいように変更。
